# searchat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
assets/: generate_logo.py
config/: settings.default.toml
docs/: unified-search-architecture.md
scripts/: benchmark_search.py  index-missing  searchat  searchat-web  setup-index  test_search_modes.py
src/searchat/api/: app.py  dependencies.py  duckdb_store.py  readiness.py
src/searchat/api/routers/: __init__.py  conversations.py  indexing.py  search.py  stats.py  status.py
src/searchat/config/: settings.py
src/searchat/core/: indexer.py  logging_config.py  progress.py  search_engine.py
src/searchat/services/: platform_utils.py
src/searchat/setup/: __main__.py  wizard.py
src/searchat/web/: conversation.html
src/searchat/web/static/css/: components.css
src/searchat/web/static/js/modules/: api.js  search.js
tests/api/: test_readiness_dependencies_duckdb_store.py
