[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchat"
version = "0.2.0"
description = "Semantic search for AI coding agents - search Claude Code and Mistral Vibe conversations"
authors = [{name = "Searchat Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "rich>=13.0.0",
    "tomli>=2.0.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "watchdog>=3.0.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "httpx>=0.24.0",  # For testing FastAPI
]

# GPU acceleration (NVIDIA CUDA)
# Note: PyTorch CUDA wheels are not on PyPI. Install manually BEFORE installing searchat:
#   uv pip install torch --index-url https://download.pytorch.org/whl/cu124
#   uv pip install -e ".[gpu]"
gpu = [
    "faiss-gpu>=1.7.2",  # GPU-accelerated FAISS (replaces faiss-cpu)
]

[project.scripts]
searchat = "searchat.cli:main"
searchat-web = "searchat.api:main"

[tool.setuptools.packages.find]
where = ["src"]

# Pytest configuration moved to pytest.ini for better organization

[tool.coverage.run]
source = ["src/searchat"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
